記事一覧・自身のbook一覧・ページネーション実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -142,6 +142,7 @@ ja:
       success: 更新しました。
   books:
     comment: コメント
+    bookbtn: Book
     create:
       success: 追加しました。
       error: 追加できませんでした。
