Facebook自動投稿実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -147,10 +147,12 @@ ja:
       success: 追加しました。
       error: 追加できませんでした。
       tweeterror: Twitterへの投稿でエラーがありました。
+      facebookerror: Facebookへの投稿でエラーがありました。
     update:
       success: 更新しました。
       error: 更新できませんでした。
       tweeterror: Twitterへの投稿でエラーがありました。
+      facebookerror: Facebookへの投稿でエラーがありました。
   articles:
     url: 記事URL
     area: 地域
