ユーザー総いいね数実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -136,6 +136,7 @@ ja:
     title: 役職
     introduction: 自己紹介
     country: 居住国
+    booklikes: いいね
     auto_post_facebook: Facebook連携
     auto_post_twitter: twitter連携
     update:
