--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -138,8 +138,10 @@ ja:
     country: 居住国
     booklikes: いいね
     linked_facebook: Facebook連携
+    action_linked_facebook: Facebookと連携する
     auto_post_facebook: Facebookへ自動投稿する
     linked_twitter: Twitter連携
+    action_linked_twitter: Twitterと連携する
     auto_post_twitter: Twitterへ自動投稿する
     update:
       success: 更新しました。
