Book数表示追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -168,6 +168,7 @@ ja:
     date: 日付
     description: 記事本文
     like: Like
+    articlebookscount: Book
     create:
       success: 追加しました。
       adderror: 追加できませんでした。
